automatically backed up by learn

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <Input type="email" id="email" name="email" placeholder="your email" required>
     <label for="phone">Phone</label>
     <Input typer="tel" id="phone" name="phone" placeholder= "your phone (optional)">
-    <label for="message">Message</label
+    <label for="message">Message</label>
     <textarea id="message" name="message" rows="10"></textarea>
     <input type="submit" values="send">
   </form>
